tests/compile-fail/integration_suite__integration__anm_consts__meta_non_const.snap
---
source: tests/integration/anm_consts.rs
expression: stderr
---
error: unknown variable 'I0'
   ┌─ <input>:28:26
   │
28 │     memory_priority: 3 * I0,
   │                          ^^ not found in this scope
   │
   = there is a 'I0' defined in ANM, which is not usable in a const context


